# aethel-esg

./: .gitignore  404.html  LICENCE  README.md  calibrated_config.json  demo_database.json  generate_demo_cache.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
api/: index.html
demo/: demo_database.json  generate_demo_cache.py  index.html
docs/: api.md  index.md  mathematics.md
docs/guides/: calibration.md  decumulation.md  query.md  visualization.md
examples/: basic_simulation.py  compare_region.py  fire_integration.py  portfolio_decumulation_demo.py  run_calibration.py  run_chunked_simulation.py  visualize_scenarios.py
guides/calibration/: index.html
guides/decumulation/: index.html
guides/query/: index.html
guides/visualization/: index.html
mathematics/: index.html
presets/: usa.json  world.json
search/: search_index.json
src/actuarial_esg/calibration/: calibrator.py  equity.py  inflation.py  rates.py
src/actuarial_esg/engine/: loops.py  parameters.py  simulator.py
src/actuarial_esg/output/: __init__.py  decumulation.py  portfolio.py  results.py  visualizer.py
src/aethel/: __init__.py
src/aethel/calibration/: __init__.py  calibrator.py  inflation.py  rates.py
src/aethel/engine/: __init__.py  loops.py  parameters.py  simulator.py
src/aethel/output/: decumulation.py  portfolio.py  results.py  time_utils.py
tests/: test.py  test_engine.py  test_robustness.py
workflows/: docs.yml
