[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethel-esg"
version = "0.1.0"
description = "An actuarial-grade Economic Scenario Generator (ESG)"
readme = "README.md"
authors = [
    { name = "Gustavo1500", email = "gugamr2@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
numba = ["numba>=0.56.0"]
plots = ["plotly>=5.10.0"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "pymdown-extensions>=10.3",
]

[tool.setuptools.packages.find]
where = ["src"]
